2008-11-25 Denis Barbier <barbier@linuxfr.org>

	* src/meshconvert/generic.py: New element.color attribute.

2008-11-24 Denis Barbier <barbier@linuxfr.org>

	* src/meshconvert/stl.py (readElement): STL reader was unable to
	read files written by STL writer.
	* src/meshconvert/generic.py: New soup2indexed class to allow
	writing indexed format when reader is not indexed.
	* src/meshconvert/*.py: In reader and writer constructors, let first
	argument be of 'file' type instead of 'string'.

2008-04-09 Denis Barbier <barbier@linuxfr.org>

	* src/meshconvert/gridgen.py (readElementIndexed): Read color
	attributes.
	* src/meshconvert/stl.py (readElement): 'endsolid' may be followed
	by geometry name.

2008-02-08 Denis Barbier <barbier@linuxfr.org>

	* src/meshconvert/off.py: Implement reader.

2007-12-20 Denis Barbier <barbier@linuxfr.org>

	* scripts/meshconvert
	  src/meshconvert/__init__.py: Move scripts/meshconvert content
	into __init__py; this way, meshconvert module can be imported
	and run in interactive sessions.

2007-12-18 Denis Barbier <barbier@linuxfr.org>

	* src/meshconvert/obj.py: Partially implement reader and writer.

2007-12-17 Denis Barbier <barbier@linuxfr.org>

	* src/meshconvert/unv.py: Store seen numbered sections in self.seen.
	* src/meshconvert/off.py: Implement writer.
	* src/meshconvert/ply.py: Implement writer.
	* src/meshconvert/stl.py: Partially implement reader and writer.

2007-12-13 Denis Barbier <barbier@linuxfr.org>

	* src/meshconvert/generic.py
	  src/meshconvert/mesh.py
	  src/meshconvert/unv.py: Add an optional 'string' argument to
	__init__() to allow using StringIO.
	* src/meshconvert/tests: Initial support for unit tests.
	* src/meshconvert/mesh.py
	  src/meshconvert/vtk.py: Use tempfile module for temporary files.

2007-12-12 Denis Barbier <barbier@linuxfr.org>

	* src/meshconvert/generic.py (getline): Blank lines
	were treated as EOF.
	* src/meshconvert/mesh.py: Add a simple reader, it only
	accepts triangles.
